// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner snapshot should match snapshot when closed 1`] = `
.c0 {
  color: white;
  max-height: 0;
  overflow: hidden;
  -webkit-transition: max-height 250ms ease-out;
  transition: max-height 250ms ease-out;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: auto;
  max-width: 900px;
  padding: 10px;
  min-width: 0;
}

<Banner
  isOpen={false}
  maxHeight="60px"
>
  <styled.div
    isOpen={false}
    maxHeight="60px"
  >
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        />
      </styled.div>
    </div>
  </styled.div>
</Banner>
`;

exports[`Banner snapshot should match snapshot when open 1`] = `
.c0 {
  color: white;
  max-height: 60px;
  overflow: hidden;
  -webkit-transition: max-height 250ms ease-out;
  transition: max-height 250ms ease-out;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: auto;
  max-width: 900px;
  padding: 10px;
  min-width: 0;
}

<Banner
  isOpen={true}
  maxHeight="60px"
>
  <styled.div
    isOpen={true}
    maxHeight="60px"
  >
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        />
      </styled.div>
    </div>
  </styled.div>
</Banner>
`;
